se cambia color del header y se oculta dropdown de cambio de tema para #4

--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -7,9 +7,9 @@
 
 
 // which themes you what to enable (empty to enable all)
-$nb-enabled-themes: (default, cosmic);
+$nb-enabled-themes: (default);
 //0095DD F2F2F2
-$primary-color-theme: #2f5573;
+$primary-color-theme: #07b4e9;
 $secundary-color-theme: #f2f2f2;
 $nb-enabled-themes: (default, cosmic, corporate);
 
