--- a/src/app/pages/movilidad/list-movilidad/list-movilidad.component.html
+++ b/src/app/pages/movilidad/list-movilidad/list-movilidad.component.html
@@ -12,7 +12,7 @@
               <!--button (click)="activetab()" >cambiar</button-->
             </nb-tab>
             <nb-tab tabTitle="{{ 'GLOBAL.formulario' | translate }}" [active]="cambiotab">
-              <ngx-crud-movilidad [movilidad_id]="uid" (eventChange)="onChange($event)"></ngx-crud-movilidad>
+              <ngx-crud-movili [movilidad_id]="uid" (eventChange)="onChange($event)"></ngx-crud-movili>
               <button (click)="activetab()" class="btn btn-info btn-sm"> <i class="nb-arrow-dropleft"></i> {{ 'GLOBAL.regresar' | translate }}</button>
             </nb-tab>
           </nb-tabset>
