--- a/src/app/pages/convenio/list-convenio/list-convenio.component.html
+++ b/src/app/pages/convenio/list-convenio/list-convenio.component.html
@@ -5,15 +5,8 @@
         <nb-tabset fullWidth (changeTab)="selectTab($event)">
             <nb-tab tabTitle="{{ 'GLOBAL.lista' | translate }}" [active]="!cambiotab">
               <br />
-                  <ng2-smart-table [settings]="settings" [source]="source" (delete)="onDelete($event)" (rowSelect)="itemselec($event)" (edit)="onEdit($event)" (create)="onCreate($event)">
+                  <ng2-smart-table [settings]="settings" [source]="source"(rowSelect)="itemselec($event)">
                     </ng2-smart-table>
-
-
-              <!--button (click)="activetab()" >cambiar</button-->
-            </nb-tab>
-            <nb-tab tabTitle="{{ 'GLOBAL.formulario' | translate }}" [active]="cambiotab">
-              <ngx-crud-convenio [convenio_id]="uid" (eventChange)="onChange($event)"></ngx-crud-convenio>
-              <button (click)="activetab()" class="btn btn-info btn-sm"> <i class="nb-arrow-dropleft"></i> {{ 'GLOBAL.regresar' | translate }}</button>
             </nb-tab>
           </nb-tabset>
     </nb-card-body>
