se eliminan los botones de cambio de tema y de cambio de layout de la plantilla

--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -97,6 +97,7 @@ $nb-themes: nb-register-theme((
 
   //buttons
   color-success: #9a0a18,
+  color-fg-highlight: #9a0a18,
 
   switcher-background: $primary-color-theme,
   switcher-background-percentage: 14%,
