--- a/src/app/pages/estados/list-estados/list-estados.component.html
+++ b/src/app/pages/estados/list-estados/list-estados.component.html
@@ -12,7 +12,7 @@
               <!--button (click)="activetab()" >cambiar</button-->
             </nb-tab>
             <nb-tab tabTitle="{{ 'GLOBAL.formulario' | translate }}" [active]="cambiotab">
-              <ngx-crud-convenio [convenio_id]="uid" (eventChange)="onChange($event)"></ngx-crud-convenio>
+              <ngx-crud-estados [estados_id]="uid" (eventChange)="onChange($event)"></ngx-crud-estados>
               <button (click)="activetab()" class="btn btn-info btn-sm"> <i class="nb-arrow-dropleft"></i> {{ 'GLOBAL.regresar' | translate }}</button>
             </nb-tab>
           </nb-tabset>
