--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">BienvenidoxD</a>
+    <a class="navbar-brand" href="#">CalculoNotas</a>
   </div>
 </nav>
 
